--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.app"
-        minSdkVersion 25
+        applicationId "com.example.aed3"
+        minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
